[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/pipes/pipe_green.png" type="Texture" id=1]
[ext_resource path="res://src/objects/Pipes.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 79 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 20 )

[node name="Pipes" type="Node2D" groups=[
"game_over",
]]
position = Vector2( 160, 140 )
script = ExtResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="BottomCollision" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="BottomSprite" type="Sprite" parent="Hitbox/BottomCollision"]
z_index = -1
texture = ExtResource( 1 )

[node name="TopCollision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -197 )
rotation = 3.14159
shape = SubResource( 1 )

[node name="BottomSprite" type="Sprite" parent="Hitbox/TopCollision"]
z_index = -1
texture = ExtResource( 1 )

[node name="Point" type="Area2D" parent="."]
position = Vector2( 15, -98 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Point"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, -98 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="Point" to="." method="_on_Point_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
